# docgen

./: Cargo.toml  README.md  example_template.tpl  example_template.txt  minified_template.tpl  minified_template.txt  test.txt
src/: alt.rs  generator.rs  main.rs  middle_names.rs  parser.rs  placeholder.rs  places.rs  types.rs  util.rs
src/entity/: args.rs  mod.rs
src/entity/distribution/: mod.rs  normal.rs
src/entity/phone/: country_code.rs
src/entity/primitive/: float.rs  guid.rs  int.rs  mod.rs  set.rs
src/generator/: args.rs  collection.rs  distribution.rs  entity.rs  location.rs  mod.rs  name.rs  phone.rs  primitive.rs
src/generator/data/: mod.rs
src/generator/location/: mod.rs
src/generator/name/: first_name.rs  mod.rs
src/generator/phone/: mod.rs
src/generator/primitive/: float.rs  float_args.rs  guid.rs  int.rs  int_args.rs  mod.rs  set.rs  set_args.rs
src/location/: mod.rs  streets.rs
src/name/: first_names.rs  last_names.rs  mod.rs
src/parser/: args.rs  error.rs  mod.rs
src/placeholder/: collection.rs  error.rs  mod.rs  stub.rs  types.rs  util.rs
src/placeholder/generator/: mod.rs
src/placeholder/location/: mod.rs  place.rs  street.rs  street_type.rs
src/placeholder/name/: last_name.rs  middle_name.rs  mod.rs
src/primitive/: mod.rs
templates/: error.json  tpl.json
