[package]
name = "data-gen"
version = "0.1.0"
authors = ["konrad-c <ko.cybulski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = "1.0.99"
rand = "0.7.0"
libmath = "0.2.1"
regex = "1.2.1"
lazy_static = "1.3.0"
uuid = { version = "0.7.4", features = ["v4"] }