[package]
name = "docgen"
version = "0.3.0"
authors = ["konrad-c <ko.cybulski@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = "1.0.99"
rand = "0.7.0"
rand_distr = "0.2.1"
libmath = "0.2.1"
regex = "1.2.1"
lazy_static = "1.3.0"
lazycell = "1.2.1"
uuid = { version = "0.7.4", features = ["v4"] }